--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,17 @@
     <title>HavTent Uni.</title>
 </head>
 <body>
+    <header>
+        <a href="#" class="logo">Hav<span>Tent</span> </a>
 
+        <ul class="nav-bar">
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Courses</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </header>
 
     <script src="js/havtent.js"></script>
 </body>
