--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,8 @@
             <li><a href="#">Courses</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
+
+        <div class="fa-solid fa-bars" id="menu-icon"></div>
     </header>
 
     <script src="js/havtent.js"></script>
