--- a/Index.html
+++ b/Index.html
@@ -25,6 +25,14 @@
         <div class="fa-solid fa-bars" id="menu-icon"></div>
     </header>
 
+    <section>
+        <div class="fa-solid fa-angle-left" id="prevBtn"></div>
+
+        <div class="section-1">
+            <img src="images/image9.jpeg" alt="">
+        </div>
+    </section>
+
     <script src="js/havtent.js"></script>
 </body>
 </html>
