--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Hav<span>Tent</span> </a>
+        <a href="#" class="logo"><img src="images/logo.jpg" alt=""></a>
 
         <ul class="nav-bar">
             <li><a href="#" class="active">Home</a></li>
@@ -26,11 +26,21 @@
     </header>
 
     <section>
-        <div class="fa-solid fa-angle-left" id="prevBtn"></div>
-
+        
         <div class="section-1">
-            <img src="images/image9.jpeg" alt="">
+            <img src="images/image9.jpeg" alt="" class="imageSlide">
         </div>
+        <button id="prevBtn"><i class="fa-solid fa-angle-left"></i></button>
+            <button id="nextBtn"><i class="fa-solid fa-angle-right"></i></button>
+
+            <div class="content-1">
+                <h1>Education can be started at Any Age</h1>
+                <p>Make education your dream and it will help you to fullfil your dream.</p>
+                <p>Education takes us to the heigth of succes.</p>
+
+                <a href="#">CHOOSE HAVTONT TODAY</a>
+            </div>
+      
     </section>
 
     <script src="js/havtent.js"></script>
