--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
                 <p>Make education your dream and it will help you to fullfil your dream.</p>
                 <p>Education takes us to the heigth of succes.</p>
 
-                <a href="#">CHOOSE HAVTONT TODAY</a>
+                <button class="chooseHavtont">CHOOSE HAVTONT TODAY</button>
             </div>
       
     </section>
