--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,8 @@
         <ul class="nav-bar">
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#about">About Us</a></li>
+            <li><a href="#about">Admission</a></li>
+            <li><a href="#about">Alumni</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Courses</a></li>
             <li><a href="#">Contact</a></li>
@@ -26,19 +28,20 @@
     </header>
 
     <section class="home"> 
-        <!-- <div class="container"> -->
-            <div class="section-1">
-                <img src="images/image9.jpeg" alt="" class="imageSlide">
+            <div class="container">
+                <div class="image-comtainer">
+                    <img src="images/image4.jpeg" alt="image" id="image">
+                </div>
             </div>
             <button id="prevBtn"><i class="fa-solid fa-angle-left"></i></button>
             <button id="nextBtn"><i class="fa-solid fa-angle-right"></i></button>
     
                 <div class="content-1">
-                    <h1>Education can be started at Any Age</h1>
-                    <p>Make education your dream and it will help you to fullfil your dream.</p>
-                    <p>Education takes us to the heigth of succes.</p>
-    
-                    <button class="chooseHavtont">CHOOSE HAVTONT TODAY</button>
+                   <h1>Education can be started at Any Age</h1>
+                   <p>Make education your dream and it will help you to fullfil your dream.</p>
+                   <p>Education takes us to the heigth of succes.</p>
+   
+                   <button class="chooseHavtont">CHOOSE HAVTONT TODAY</button>
                 </div>
         <!-- </div> -->
     </section>
@@ -62,6 +65,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos reiciendis provident inventore fugiat quaerat, qui odio error rem optio nam cumque harum unde animi fuga cupiditate molestiae distinctio ducimus quas quis dicta labore enim assumenda necessitatibus debitis. In exercitationem illo atque officiis, molestias veritatis numquam, nesciunt eum distinctio harum commodi maiores vitae tempora. Qui porro est doloremque, beatae tempora iure!
                 </p>
                 </div>
+                <div class="holder"></div>
             </div>
         </div>
     </section>
