--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
     <section class="home"> 
             <div class="container">
                 <div class="image-comtainer">
-                    <img src="images/image4.jpeg" alt="image" id="image">
+                    <img src="images/image9.jpeg" alt="image" id="image">
                 </div>
             </div>
             <button id="prevBtn"><i class="fa-solid fa-angle-left"></i></button>
@@ -51,9 +51,12 @@
             <h1>About HavTont</h1>
             <div class="about-us">
                 <img src="images/image12.jpeg" alt="school owner">
-
+                <div class="holder"></div>
                 <div class="info">
                 <h2>What to know about..</h2>
+
+                <br>
+
                 <p class="info-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, tempore ex aliquid laudantium pariatur corporis magni quo quibusdam ratione harum, cumque perspiciatis tenetur, omnis nemo quidem temporibus nulla ut? Sit facere voluptatibus at molestiae molestias delectus eveniet, harum atque. Iste quisquam sit nam sed accusamus architecto. Eligendi reiciendis culpa ab.
 
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, tempore ex aliquid laudantium pariatur corporis magni quo quibusdam ratione harum, cumque perspiciatis tenetur, omnis nemo quidem temporibus nulla ut? Sit facere voluptatibus at molestiae molestias delectus eveniet, harum atque. Iste quisquam sit nam sed accusamus architecto. Eligendi reiciendis culpa ab.
@@ -65,7 +68,26 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos reiciendis provident inventore fugiat quaerat, qui odio error rem optio nam cumque harum unde animi fuga cupiditate molestiae distinctio ducimus quas quis dicta labore enim assumenda necessitatibus debitis. In exercitationem illo atque officiis, molestias veritatis numquam, nesciunt eum distinctio harum commodi maiores vitae tempora. Qui porro est doloremque, beatae tempora iure!
                 </p>
                 </div>
-                <div class="holder"></div>
+                
+
+                <div class="book-holder1"></div>
+                <div class="book-holder2"></div>
+                <div class="book-holder3"></div>
+                <div class="book-holder4"></div>
+                <div class="book-holder5"></div>
+                <div class="book-holder6"></div>
+                <div class="book-holder7"></div>
+                <div class="book-holder8"></div>
+                <div class="book-holder9"></div>
+                <div class="book-holder10"></div>
+                <div class="book-holder11"></div>
+                <div class="book-holder12"></div>
+                <div class="book-holder13"></div>
+                <div class="book-holder14"></div>
+                <div class="book-holder15"></div>
+                <div class="book-holder16"></div>
+                <div class="book-holder17"></div>
+                <div class="book-holder18"></div>
             </div>
         </div>
     </section>
