--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="css/havtent.css">
+    <link rel="stylesheet" href="css/course.css">
     <title>HavTent Uni.</title>
 </head>
 <body>
@@ -111,7 +112,7 @@
     </section>
 
     <section>
-        <div class="courses">
+        <div class="courses-section">
             <div class="course-container">
                 <div class="course-contents">
                     <div class="course-head">
@@ -120,6 +121,32 @@
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis itaque
                             iusto corrupti excepturi similique veritatis amet? Dolore facere excepturi unde.
                         </p>
+
+                        <div class="course-choices">
+                            <div class="course">
+                                <img src="images/course1.jpeg" alt="course">
+                                <h2>Computer Science</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus
+                                    amet adipisci, cum nam reiciendis cum nam reiciendis, cum nam.
+                                </p>
+                            </div>
+
+                            <div class="course">
+                                <img src="images/course1.jpeg" alt="course">
+                                <h2>Computer Science</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus
+                                    amet adipisci, cum nam reiciendis cum nam reiciendis, cum nam.
+                                </p>
+                            </div>
+
+                            <div class="course">
+                                <img src="images/course1.jpeg" alt="course">
+                                <h2>Computer Science</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus
+                                    amet adipisci, cum nam reiciendis cum nam reiciendis, cum nam.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
