--- a/Index.html
+++ b/Index.html
@@ -125,25 +125,28 @@
                         <div class="course-choices">
                             <div class="course">
                                 <img src="images/course1.jpeg" alt="course">
-                                <h2>Computer Science</h2>
+                                <div class="content">
+                                    <h1>Computer Science</h1>
+                                    <h3>Programming</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus
+                                    amet.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="course">
+                                <img src="images/course1.jpeg" alt="course">
+                                <h1>Computer Science</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus
-                                    amet adipisci, cum nam reiciendis cum nam reiciendis, cum nam.
+                                    amet adipisci, .
                                 </p>
                             </div>
 
                             <div class="course">
                                 <img src="images/course1.jpeg" alt="course">
-                                <h2>Computer Science</h2>
+                                <h1>Computer Science</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus
-                                    amet adipisci, cum nam reiciendis cum nam reiciendis, cum nam.
-                                </p>
-                            </div>
-
-                            <div class="course">
-                                <img src="images/course1.jpeg" alt="course">
-                                <h2>Computer Science</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus
-                                    amet adipisci, cum nam reiciendis cum nam reiciendis, cum nam.
+                                    amet adipisci, .
                                 </p>
                             </div>
                         </div>
