--- a/Index.html
+++ b/Index.html
@@ -128,27 +128,112 @@
                                 <div class="content">
                                     <h1>Computer Science</h1>
                                     <h3>Programming</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus
-                                    amet.
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
                                     </p>
+                                    <div class="course-length">
+                                        <h4>100+ courses</h4>
+                                        <a href="#">~></a>
+                                    </div>
                                 </div>
                             </div>
 
                             <div class="course">
                                 <img src="images/course1.jpeg" alt="course">
-                                <h1>Computer Science</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus
-                                    amet adipisci, .
-                                </p>
+                                <div class="content">
+                                    <h1>Computer Science</h1>
+                                    <h3>Programming</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    </p>
+                                    <div class="course-length">
+                                        <h4>100+ courses</h4>
+                                        <a href="#">~></a>
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="course">
                                 <img src="images/course1.jpeg" alt="course">
-                                <h1>Computer Science</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus
-                                    amet adipisci, .
-                                </p>
+                                <div class="content">
+                                    <h1>Computer Science</h1>
+                                    <h3>Programming</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    </p>
+                                    <div class="course-length">
+                                        <h4>100+ courses</h4>
+                                        <a href="#">~></a>
+                                    </div>
+                                </div>
                             </div>
+
+                            <div class="course">
+                                <img src="images/course1.jpeg" alt="course">
+                                <div class="content">
+                                    <h1>Computer Science</h1>
+                                    <h3>Programming</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    </p>
+                                    <div class="course-length">
+                                        <h4>100+ courses</h4>
+                                        <a href="#">~></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="course">
+                                <img src="images/course1.jpeg" alt="course">
+                                <div class="content">
+                                    <h1>Computer Science</h1>
+                                    <h3>Programming</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    </p>
+                                    <div class="course-length">
+                                        <h4>100+ courses</h4>
+                                        <a href="#">~></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="course">
+                                <img src="images/course1.jpeg" alt="course">
+                                <div class="content">
+                                    <h1>Computer Science</h1>
+                                    <h3>Programming</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    </p>
+                                    <div class="course-length">
+                                        <h4>100+ courses</h4>
+                                        <a href="#">~></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="course">
+                                <img src="images/course1.jpeg" alt="course">
+                                <div class="content">
+                                    <h1>Computer Science</h1>
+                                    <h3>Programming</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    </p>
+                                    <div class="course-length">
+                                        <h4>100+ courses</h4>
+                                        <a href="#">~></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="course">
+                                <img src="images/course1.jpeg" alt="course">
+                                <div class="content">
+                                    <h1>Computer Science</h1>
+                                    <h3>Programming</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    </p>
+                                    <div class="course-length">
+                                        <h4>100+ courses</h4>
+                                        <a href="#">~></a>
+                                    </div>
+                                </div>
+                            </div>                            
                         </div>
                     </div>
                 </div>
