--- a/Index.html
+++ b/Index.html
@@ -111,16 +111,18 @@
         </div>
     </section>
 
-    <section>
+    <section class="our-courses">
         <div class="courses-section">
             <div class="course-container">
                 <div class="course-contents">
                     <div class="course-head">
+                        <div class="Heading">
                         <h2>Browse courses by categories</h2>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis itaque
                             iusto corrupti excepturi similique veritatis amet? Dolore facere excepturi unde.
                         </p>
+                        </div>
 
                         <div class="course-choices">
                             <div class="course">
@@ -138,14 +140,14 @@
                             </div>
 
                             <div class="course">
-                                <img src="images/course1.jpeg" alt="course">
+                                <img src="images/course2.jpeg" alt="course">
                                 <div class="content">
-                                    <h1>Computer Science</h1>
-                                    <h3>Programming</h3>
+                                    <h1>Business Admin</h1>
+                                    <h3>Business</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
                                     </p>
                                     <div class="course-length">
-                                        <h4>100+ courses</h4>
+                                        <h4>40+ courses</h4>
                                         <a href="#">~></a>
                                     </div>
                                 </div>
