--- a/Index.html
+++ b/Index.html
@@ -154,10 +154,38 @@
                             </div>
 
                             <div class="course">
-                                <img src="images/course1.jpeg" alt="course">
+                                <img src="images/marketing.jpeg" alt="course">
                                 <div class="content">
-                                    <h1>Computer Science</h1>
-                                    <h3>Programming</h3>
+                                    <h1>Digital Marketing</h1>
+                                    <h3>Marketing</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    </p>
+                                    <div class="course-length">
+                                        <h4>40+ courses</h4>
+                                        <a href="#">~></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="course">
+                                <img src="images/estate.jpeg" alt="course">
+                                <div class="content">
+                                    <h1>Real Estate</h1>
+                                    <h3>Marketing</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    </p>
+                                    <div class="course-length">
+                                        <h4>10+ courses</h4>
+                                        <a href="#">~></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="course">
+                                <img src="images/cybersecurity.jpeg" alt="course">
+                                <div class="content">
+                                    <h1>Cybersecurity</h1>
+                                    <h3>Hacking</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
                                     </p>
                                     <div class="course-length">
@@ -168,10 +196,24 @@
                             </div>
 
                             <div class="course">
-                                <img src="images/course1.jpeg" alt="course">
+                                <img src="images/engineering.jpeg" alt="course">
                                 <div class="content">
-                                    <h1>Computer Science</h1>
-                                    <h3>Programming</h3>
+                                    <h1>Mechanical Engineer</h1>
+                                    <h3>Engineering</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    </p>
+                                    <div class="course-length">
+                                        <h4>60+ courses</h4>
+                                        <a href="#">~></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="course">
+                                <img src="images/robot.jpeg" alt="course">
+                                <div class="content">
+                                    <h1>Machine Learning</h1>
+                                    <h3>ML & Robotics</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
                                     </p>
                                     <div class="course-length">
@@ -182,61 +224,21 @@
                             </div>
 
                             <div class="course">
-                                <img src="images/course1.jpeg" alt="course">
+                                <img src="images/doctor.jpeg" alt="course">
                                 <div class="content">
-                                    <h1>Computer Science</h1>
-                                    <h3>Programming</h3>
+                                    <h1>Medicin</h1>
+                                    <h3>Doctor</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
                                     </p>
                                     <div class="course-length">
-                                        <h4>100+ courses</h4>
-                                        <a href="#">~></a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="course">
-                                <img src="images/course1.jpeg" alt="course">
-                                <div class="content">
-                                    <h1>Computer Science</h1>
-                                    <h3>Programming</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
-                                    </p>
-                                    <div class="course-length">
-                                        <h4>100+ courses</h4>
-                                        <a href="#">~></a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="course">
-                                <img src="images/course1.jpeg" alt="course">
-                                <div class="content">
-                                    <h1>Computer Science</h1>
-                                    <h3>Programming</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
-                                    </p>
-                                    <div class="course-length">
-                                        <h4>100+ courses</h4>
-                                        <a href="#">~></a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="course">
-                                <img src="images/course1.jpeg" alt="course">
-                                <div class="content">
-                                    <h1>Computer Science</h1>
-                                    <h3>Programming</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
-                                    </p>
-                                    <div class="course-length">
-                                        <h4>100+ courses</h4>
+                                        <h4>90+ courses</h4>
                                         <a href="#">~></a>
                                     </div>
                                 </div>
                             </div>                            
                         </div>
+
+                        <button class="more-course-btn" id="moreCourseBtn">See more</button>
                     </div>
                 </div>
             </div>
