--- a/Index.html
+++ b/Index.html
@@ -18,11 +18,11 @@
         <ul class="nav-bar">
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Admission</a></li>
-            <li><a href="#">Alumni</a></li>
-            <li><a href="#">News</a></li>
             <li><a href="#">Courses</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Admission</a></li>
+            <!-- <li><a href="#">Alumni</a></li> -->
+            <li><a href="#">News</a></li>
+            <!-- <li><a href="#">Contact</a></li> -->
         </ul>
 
         <div class="fa-solid fa-bars" id="menu-icon"></div>
@@ -89,24 +89,24 @@
                 </div>
                 
 
-                <div class="book-holder1"></div>
-                <div class="book-holder2"></div>
-                <div class="book-holder3"></div>
-                <div class="book-holder4"></div>
-                <div class="book-holder5"></div>
-                <div class="book-holder6"></div>
-                <div class="book-holder7"></div>
-                <div class="book-holder8"></div>
-                <div class="book-holder9"></div>
-                <div class="book-holder10"></div>
-                <div class="book-holder11"></div>
-                <div class="book-holder12"></div>
-                <div class="book-holder13"></div>
-                <div class="book-holder14"></div>
-                <div class="book-holder15"></div>
-                <div class="book-holder16"></div>
-                <div class="book-holder17"></div>
-                <div class="book-holder18"></div>
+                <span class="book-holder1"></span>
+                <span class="book-holder2"></span>
+                <span class="book-holder3"></span>
+                <span class="book-holder4"></span>
+                <span class="book-holder5"></span>
+                <span class="book-holder6"></span>
+                <span class="book-holder7"></span>
+                <span class="book-holder8"></span>
+                <span class="book-holder9"></span>
+                <span class="book-holder10"></span>
+                <span class="book-holder11"></span>
+                <span class="book-holder12"></span>
+                <span class="book-holder13"></span>
+                <span class="book-holder14"></span>
+                <span class="book-holder15"></span>
+                <span class="book-holder16"></span>
+                <span class="book-holder17"></span>
+                <span class="book-holder18"></span>
             </div>
         </div>
     </section>
@@ -120,7 +120,7 @@
                         <h2>Browse courses by categories</h2>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis itaque
-                            iusto corrupti excepturi similique veritatis amet? Dolore facere excepturi unde.
+                            iusto corrupti excepturi similique veritatis amet.
                         </p>
                         </div>
 
@@ -130,7 +130,8 @@
                                 <div class="content">
                                     <h1>Computer Science</h1>
                                     <h3>Programming</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore 
+                                        similique veritatis amet.
                                     </p>
                                     <div class="course-length">
                                         <h4>100+ courses</h4>
@@ -144,7 +145,8 @@
                                 <div class="content">
                                     <h1>Business Admin</h1>
                                     <h3>Business</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore
+                                        similique veritatis amet.
                                     </p>
                                     <div class="course-length">
                                         <h4>40+ courses</h4>
@@ -158,7 +160,8 @@
                                 <div class="content">
                                     <h1>Digital Marketing</h1>
                                     <h3>Marketing</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore
+                                        similique veritatis amet.
                                     </p>
                                     <div class="course-length">
                                         <h4>40+ courses</h4>
@@ -172,7 +175,8 @@
                                 <div class="content">
                                     <h1>Real Estate</h1>
                                     <h3>Marketing</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore
+                                        similique veritatis amet.
                                     </p>
                                     <div class="course-length">
                                         <h4>10+ courses</h4>
@@ -186,7 +190,8 @@
                                 <div class="content">
                                     <h1>Cybersecurity</h1>
                                     <h3>Hacking</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore
+                                        similique veritatis amet.
                                     </p>
                                     <div class="course-length">
                                         <h4>100+ courses</h4>
@@ -200,7 +205,8 @@
                                 <div class="content">
                                     <h1>Mechanical Engineer</h1>
                                     <h3>Engineering</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore
+                                        similique veritatis amet.
                                     </p>
                                     <div class="course-length">
                                         <h4>60+ courses</h4>
@@ -214,7 +220,8 @@
                                 <div class="content">
                                     <h1>Machine Learning</h1>
                                     <h3>ML & Robotics</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore
+                                        similique veritatis amet.
                                     </p>
                                     <div class="course-length">
                                         <h4>100+ courses</h4>
@@ -228,7 +235,8 @@
                                 <div class="content">
                                     <h1>Medicin</h1>
                                     <h3>Doctor</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore.
+                                    <p>Lorem ipsum dolor sit amet consectetur elit.a dipisicing  Inventore
+                                        similique veritatis amet.
                                     </p>
                                     <div class="course-length">
                                         <h4>90+ courses</h4>
@@ -238,7 +246,64 @@
                             </div>                            
                         </div>
 
-                        <button class="more-course-btn" id="moreCourseBtn">See more</button>
+                        <button class="moreCourseBtn" id="moreCourseBtn">Browse all course</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="Admission">
+            <div class="admission-container">
+                <div class="container">
+                    <div class="ad-content">
+                        <div class="heading">
+                            <h1>Enhance Your Skills With Best Online Causes</h1>
+                        </div>
+
+                        <div class="ad-content">
+                            <div class="content-a">
+                                <h2>900+</h2>
+                            </div>
+
+                            <div class="content-text">
+                                <h3>Teachers Involve in Us</h3>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta eveniet 
+                                    dolorum atque quam? Ipsum recusandae accusantium perferendis corporis
+                                    nesciunt amet dolorem itaque eligendi dolorum illum.</p>
+                            </div>
+                        </div>
+
+                        <div class="ad-content">
+                            <div class="content-a">
+                                <h2>2.5K+</h2>
+                            </div>
+
+                            <div class="content-text">
+                                <h3>Teachers Involve in Us</h3>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta eveniet 
+                                    dolorum atque quam? Ipsum recusandae accusantium perferendis corporis
+                                    nesciunt amet dolorem itaque eligendi dolorum illum.</p>
+                            </div>
+                        </div>
+
+                        <div class="ad-content">
+                            <div class="content-a">
+                                <h2>600+</h2>
+                            </div>
+
+                            <div class="content-text">
+                                <h3>Teachers Involve in Us</h3>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta eveniet 
+                                    dolorum atque quam? Ipsum recusandae accusantium perferendis corporis
+                                    nesciunt amet dolorem itaque eligendi dolorum illum.</p>
+                            </div>
+                        </div>
+
+                        <div class="ad-image">
+                            <img src="images/image8.jpeg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
