--- a/Index.html
+++ b/Index.html
@@ -258,11 +258,12 @@
             <div class="admission-container">
                 <div class="container">
                     <div class="ad-content">
+                        <div class="flex">
                         <div class="heading">
                             <h1>Enhance Your Skills With Best Online Causes</h1>
                         </div>
 
-                        <div class="ad-content">
+                        <div class="contents">
                             <div class="content-a">
                                 <h2>900+</h2>
                             </div>
@@ -275,7 +276,7 @@
                             </div>
                         </div>
 
-                        <div class="ad-content">
+                        <div class="contents">
                             <div class="content-a">
                                 <h2>2.5K+</h2>
                             </div>
@@ -288,7 +289,7 @@
                             </div>
                         </div>
 
-                        <div class="ad-content">
+                        <div class="contents">
                             <div class="content-a">
                                 <h2>600+</h2>
                             </div>
@@ -300,9 +301,14 @@
                                     nesciunt amet dolorem itaque eligendi dolorum illum.</p>
                             </div>
                         </div>
+                        </div>
 
                         <div class="ad-image">
-                            <img src="images/image8.jpeg" alt="">
+                                <img src="images/image8.jpeg" alt="" class="image-1">
+                            <div class="grid-image">
+                                <img src="images/image1.jpeg" alt="" class="image-2">
+                                <img src="images/picture1.jpeg" alt="" class="image-3">
+                            </div>
                         </div>
                     </div>
                 </div>
